unpackaged/main/default/objects/SM_Configs__c/SM_Configs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Org Configs</label>
</CustomObject>