unpackaged/main/default/objects/SM_Configs__c/fields/API_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>API_Named_Credential__c</fullName>
    <label>API Named Credential</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>