unpackaged/main/default/objects/SM_Configs__c/fields/Batch_User__c.field-meta.xml
<CustomField>
    <fullName>Batch_User__c</fullName>
    <label>Batch User</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>