unpackaged/main/default/objects/SM_Configs__c/fields/Batch_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_User_Id__c</fullName>
    <label>Batch User Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>