unpackaged/main/default/objects/SM_Configs__c/fields/Enable_Object_Event_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Object_Event_Logging__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A flag that can be set to enable/disable object event (Object_Event__e) logging.</description>
    <inlineHelpText>Check to enable object event logging.</inlineHelpText>
    <label>Integ: Enable Object Event Logging</label>
    <type>Checkbox</type>
</CustomField>