unpackaged/main/default/objects/SM_Configs__c/fields/Enable_Object_Events_Publishing__c.field-meta.xml
<CustomField>
    <fullName>Enable_Object_Events_Publishing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integ: Enable Object Events Publishing</label>
    <type>Checkbox</type>
</CustomField>