unpackaged/main/default/objects/SM_Configs__c/fields/Integration_User_2__c.field-meta.xml
<CustomField>
    <fullName>Integration_User_2__c</fullName>
    <label>Integration User 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>