unpackaged/main/default/objects/SM_Configs__c/fields/Integration_User__c.field-meta.xml
<CustomField>
    <fullName>Integration_User__c</fullName>
    <description>Used as filter for SF outbound integ. If the record was last updated by this user, SF won&#39;t publish a Platform Event</description>
    <label>Integration User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>