unpackaged/main/default/objects/SM_Configs__c/fields/Integration_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_User_Id__c</fullName>
    <description>CCRM15-140</description>
    <label>Integration User Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>