unpackaged/main/default/objects/SM_Configs__c/fields/Marketing_Connect_User__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Connect_User__c</fullName>
    <label>Marketing Connect User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>