unpackaged/main/default/objects/SM_Configs__c/fields/Marketing_Connect_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Connect_User_Id__c</fullName>
    <label>Marketing Connect User Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>